<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity_boton4">

    <FrameLayout
        android:id="@+id/container1"
        android:layout_width="match_parent"
        android:layout_height="509dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button5"
            style="@style/boton2"
            android:onClick="onClick"
            android:text="@string/Amapola" />

        <Button
            android:id="@+id/button6"
            style="@style/boton3"
            android:onClick="onClick1"
            android:text="@string/jazmin" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button7"
            style="@style/boton4"
            android:layout_width="61dp"
            android:onClick="onClick2"
            android:text="@string/rosa" />

        <Button
            android:id="@+id/button8"
            style="@style/boton4"
            android:onClick="onClick3"
            android:text="@string/tulipan" />
    </LinearLayout>

</LinearLayout>